# credweaver

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  bandit-report.json  cupp.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
credweaver/: __init__.py  cli.py
credweaver/config/: defaults.py  loader.py  schema.py
credweaver/core/: engine.py  pipeline.py  profile.py  token_extractor.py
credweaver/filters/: charset.py  dedup.py  length.py
credweaver/input/: interactive.py  json_loader.py  yaml_loader.py
credweaver/mutations/: append.py  base.py  case.py  leet.py  padding.py
credweaver/output/: file_writer.py  stats.py
credweaver/strategies/: base.py  common_passwords.py  concatenation.py  date_based.py  keyboard_patterns.py  registry.py
cupp/: __init__.py  cli.py
cupp/config/: defaults.py  loader.py  schema.py
cupp/core/: engine.py  pipeline.py  profile.py  token_extractor.py
cupp/filters/: charset.py  dedup.py  length.py
cupp/input/: interactive.py  json_loader.py  yaml_loader.py
cupp/mutations/: append.py  base.py  case.py  leet.py  padding.py
cupp/strategies/: base.py  common_passwords.py  concatenation.py  date_based.py  keyboard_patterns.py  registry.py
docs/: architecture.md  performance.md  plugin_system.md  rust_engine.md
k8s/: README.md  configmap.yaml  cronjob.yaml  job.yaml  namespace.yaml  pvc.yaml
profiles/: ci_smoke.yaml  example_target.yaml
rust_engine/: Cargo.toml
rust_engine/src/: combinator.rs  dedup.rs  entropy.rs  generator.rs  lib.rs  markov.rs  mutations.rs
scripts/: cargo-clippy-check.sh  cargo-fmt-check.sh  install-hooks.sh  pre-push
tests/: conftest.py
tests/benchmarks/: bench_generation.py
tests/integration/: test_engine.py  test_rust_engine.py
tests/unit/: test_config.py  test_engine_integration.py  test_filters.py  test_mutations.py  test_output.py  test_pipeline.py  test_profile.py  test_strategies.py  test_token_extractor.py
