[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "cupp-v2"
version = "2.0.0"
description = "Advanced password wordlist generator — Python + Rust hybrid"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "CUPP v2 Contributors" }]
keywords = ["security", "pentesting", "wordlist", "password", "audit"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Security",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "typer[all]>=0.12",
    "rich>=13",
    "pydantic>=2",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
    "maturin>=1.7",
]

[project.scripts]
cupp = "cupp.cli:main"

[tool.maturin]
module-name = "cupp_engine"
manifest-path = "rust_engine/Cargo.toml"

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
